# agentickernel

./: .gitignore  README.md  kernel_optimization.py  main.py  pyproject.toml  registry.hpp.template
generated_implementations_O0/anthropic_claude-opus-4.6/: opt_v10_addsub.hpp  opt_v11_col_tile.hpp  opt_v12_transpose_popcount.hpp  opt_v13_preexpand.hpp  opt_v14_neon_bitexpand.hpp  opt_v15_ptile.hpp  opt_v16_lut4bit.hpp  opt_v17_p_unroll.hpp  opt_v18_p_unroll4.hpp  opt_v19_p_unroll8.hpp  opt_v1_scalar.hpp  opt_v20_p_unroll16.hpp  opt_v21_p8_m2.hpp  opt_v22_p8_explicit.hpp  opt_v23_p12_explicit.hpp  opt_v24_p8_bitmath.hpp  opt_v25_m3_p12.hpp  opt_v2_neon.hpp  opt_v3_popcount.hpp  opt_v4_popcount_fix.hpp  opt_v5_scalar_tight.hpp  opt_v6_tiled.hpp  opt_v7_scalar_tiled.hpp  opt_v8_scalar_tile8.hpp  opt_v9_neon_proper.hpp
generated_implementations_O0/gemma4_26b/: optimized_matmul_v1.hpp  optimized_matmul_v10.hpp  optimized_matmul_v11.hpp  optimized_matmul_v12_broken.hpp  optimized_matmul_v13_broken.hpp  optimized_matmul_v14.hpp  optimized_matmul_v15.hpp  optimized_matmul_v16.hpp  optimized_matmul_v17_broken.hpp  optimized_matmul_v17_broken_v2.hpp  optimized_matmul_v18_broken.hpp  optimized_matmul_v19.hpp  optimized_matmul_v2.hpp  optimized_matmul_v20.hpp  optimized_matmul_v21.hpp  optimized_matmul_v22_broken.hpp  optimized_matmul_v23_broken.hpp  optimized_matmul_v23_broken_v2.hpp  optimized_matmul_v3.hpp  (+22 more)
sandbox/: CMakeLists.txt  baseline.hpp  registry.hpp  test_and_bench.cpp
sandbox_bmm/: CMakeLists.txt  baseline.hpp  registry.hpp  registry.hpp.template  test_and_bench.cpp
(+913 files in other folders)
